--- a/about.html
+++ b/about.html
@@ -8,7 +8,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400..900;1,400..900&display=swap" rel="stylesheet">
-    <link rel="icon" href="favicon/favicon.ico" type="image/x-icon">
+    <link rel="icon" href="favicon.ico" type="image/x-icon">
 </head>
 <body>
     
@@ -45,12 +45,12 @@
             <h3 class="highlighted-text">Join Leaf & Latte and share the love!</h3>
 
                 <div class="app-buttons">
-                    <a href="#"><img src="img/gplay.png" alt="Google Play"></a>
-                    <a href="#"><img src="img/apple.png" alt="App Store"></a>
+                    <a href="#"><img src="gplay.png" alt="Google Play"></a>
+                    <a href="#"><img src="apple.png" alt="App Store"></a>
                 </div>
             </div>
             <div class="about-image">
-                <img src="img/sipping_corner_interior.jpg" alt="Cafe Interior">
+                <img src="sipping_corner_interior.jpg" alt="Cafe Interior">
             </div>
         </div>
 
@@ -64,7 +64,7 @@
 
     <footer>
         <p>Copyright &copy; 2024 Leaf & Latte. All rights reserved. <a href="#">Privacy Policy</a> | <a href="#">Terms of Service</a></p>
-        <img src="img/facebook-twitter-instagram-logo-number-symbol-text-trademark-tra.png" alt="Social Media Icons">
+        <img src="facebook-twitter-instagram-logo-number-symbol-text-trademark-tra.png" alt="Social Media Icons">
     </footer>
 
     <script src="transition.js"></script>
