--- a/index.html
+++ b/index.html
@@ -32,9 +32,9 @@
 
         <div class="hero-content">
             <div class="hero-images">
-                <img src="img/nature-themed-cafes-near-jb-checkpoint-naug-just-plants-exterior.png" alt="Cafe Exterior" class="hero-img active">
-                <img src="img/Main-Cover-Image.jpg" alt="Outdoor" class="hero-img">
-                <img src="img/18161927-1920-x-1200-px-33_cover_1920x1200.jpg" alt="Indoor" class="hero-img">
+                <img src="nature-themed-cafes-near-jb-checkpoint-naug-just-plants-exterior.png" alt="Cafe Exterior" class="hero-img active">
+                <img src="Main-Cover-Image.jpg" alt="Outdoor" class="hero-img">
+                <img src="18161927-1920-x-1200-px-33_cover_1920x1200.jpg" alt="Indoor" class="hero-img">
             </div>
             <div class="hero-text">
                 <h2>Discover the best coffee</h2>
@@ -60,7 +60,7 @@
 
     <footer>
         <p>Copyright &copy; 2024 Leaf & Latte. All rights reserved. <a href="#">Privacy Policy</a> | <a href="#">Terms of Service</a></p>
-        <img src="img/facebook-twitter-instagram-logo-number-symbol-text-trademark-tra.png" alt="Social Media Icons">
+        <img src="facebook-twitter-instagram-logo-number-symbol-text-trademark-tra.png" alt="Social Media Icons">
     </footer>
     
     <script src="transition.js"></script>
